fix some issues in test code.